--- a/index.html
+++ b/index.html
@@ -367,16 +367,15 @@
                 <h4 style="color: #173b6c">Dylan Meyer</h4>
                 <p>
                   <em style="color: white"
-                    >Innovative and deadline-driven Graphic Designer with 3+
-                    years of experience designing and developing user-centered
-                    digital/print marketing material from initial concept to
-                    final, polished deliverable.</em
+                    >Innovative and deadline-driven Junior Developer with 1+
+                    years of experience designing and developing websites and
+                    applications</em
                   >
                 </p>
                 <ul>
-                  <li style="color: white">Portland par 127,Orlando, FL</li>
-                  <li style="color: white">(123) 456-7891</li>
-                  <li style="color: white">alice.barkley@example.com</li>
+                  <li style="color: white">Westridge Mitchell's Plain</li>
+                  <li style="color: white">082 760 5132</li>
+                  <li style="color: white">dylanmeyer56.dm@gmail.com</li>
                 </ul>
               </div>
 
